@@ -1,3 +1,6 @@
+v40:
+- Update turbobit.net, hitfile.net, k2s.cc
+- Update class.php
 v39:
 - Update class.php
 - Update extmatrix.com, prefiles.com, hotlink.cc, hitfile.net
